--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                 </ol>
                 <div class="carousel-inner carousel-page">
                 	<div class="carousel-item active">
-                		<img src="images/vitalii.jpg" class="d-block w-100" alt="pizza">
+                		<img src="images/pizza-1.jpg" class="d-block w-100" alt="pizza">
                 	</div>
                 	<div class="carousel-item">
-                		<img src="images/foad.jpg" class="d-block w-100" alt="pizza">
+                		<img src="images/pizza-2.jpg" class="d-block w-100" alt="pizza">
                 	</div>
                 	<div class="carousel-item">
-                		<img src="images/shourav.jpg" class="d-block w-100" alt="pizza">
+                		<img src="images/pizza-3.jpg" class="d-block w-100" alt="pizza">
                 	</div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="sr-only">Previous</span></a>
@@ -51,14 +51,14 @@
         </div>
     </div>
 
-    <div class="container">
-    	<h2 class="text-center he2">About Pizza</h2>
+    <div class="container-fluid">
+    	<h2 class="text-center pizza-heading">About Pizza</h2>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
     	<div class="row">
     		<div class="col-md-6">
-    		    <img src="images/peter.jpg" alt="about pizza" class="img-fluid">	
+    		    <img src="images/pizza-4.jpg" alt="about pizza" class="img-fluid">	
     		</div>
     		<div class="col-md-6">
     			<h3>Pizza Is Awesome</h3>
@@ -78,90 +78,71 @@
     				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
     				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     			</p>
-    			<p>
-    				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    			</p>
     		</div>
     	</div>
     </div>
 
-    <div class="container">
-    	<h3 class="text-center he2">Pizza Types</h3>
+    <div class="container-fluid">
+    	<h3 class="text-center pizza-heading">Pizza Types</h3>
     </div>
-    <div class="container">
+    <div class="container-fluid">
     	<div class="row">
     		<div class="col-md-3">
     			<div class="card" style="width: 18rem;">
-    				<img src="images/asorted.jpg" class="card-img-top" alt="asorted pizza">
+    				<img src="images/pizza-5.jpg" class="card-img-top p-1" alt="asorted pizza">
     				<div class="card-body">
-    					<h5 class="card-title">Asorted Pizza</h5>
+    					<h5 class="card-title text-center">ASSORTED PIZZA</h5>
     					<p class="card-text">
     					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
     					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    					consequat.</p>
     				</div>
     			</div>
     		</div>
     		<div class="col-md-3">
     			<div class="card" style="width: 18rem;">
-    				<img src="images/cheese.jpg" class="card-img-top" alt="cheese pizza">
+    				<img src="images/pizza-7.jpg" class="card-img-top p-1" alt="cheese pizza">
     				<div class="card-body">
-    					<h5 class="card-title">Cheese Pizza</h5>
+    					<h5 class="card-title text-center">CHEESE PIZZA</h5>
     					<p class="card-text">
     						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
     						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    					</p>
+    						consequat.</p>
     				</div>
     			</div>
     		</div>
     		<div class="col-md-3">
     			<div class="card" style="width: 18rem;">
-    				<img src="images/pepperoni.jpg" class="card-img-top" alt="pepperoni pizza">
+    				<img src="images/pizza-6.jpg" class="card-img-top p-1" alt="pepperoni pizza">
     				<div class="card-body">
-    					<h5 class="card-title">Peperroni Pizza</h5>
+    					<h5 class="card-title text-center">BOSSU PIZZA</h5>
     					<p class="card-text">
     						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
     						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    					</p>
+    						consequat.</p>
     				</div>
     			</div>
     		</div>
     		<div class="col-md-3">
     			<div class="card" style="width: 18rem;">
-    				<img src="images/vegetable.jpg" class="card-img-top" alt="vegetable pizza">
+    				<img src="images/pizza-8.jpg" class="card-img-top p-1" alt="vegetable pizza">
     				<div class="card-body">
-    					<h5 class="card-title">Vegetable Pizza</h5>
+    					<h5 class="card-title text-center">VEGETABLE PIZZA</h5>
     					<p class="card-text">
     						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
     						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    					</p>
+    						consequat.</p>
     				</div>
     			</div>
     		</div>
     	</div>
     </div>
 
-    <div class="footer">
+    <div class="footer mt-5">
     	<div class="container">
     			<p class="text-center"> 
     				&copy; 2019 Pizzamania All Rights Reserved!
